@@ -1,4 +1,4 @@
-/*******************************************************************************
+/*
  * Copyright (c) 2010-2020 Haifeng Li. All rights reserved.
  *
  * Smile is free software: you can redistribute it and/or modify
@@ -13,7 +13,7 @@
  *
  * You should have received a copy of the GNU Lesser General Public License
  * along with Smile.  If not, see <https://www.gnu.org/licenses/>.
- ******************************************************************************/
+ */
 
 package smile.math.blas;
 
@@ -33,20 +33,26 @@ public interface BLAS {
     /** The default BLAS engine. */
     BLAS engine = getInstance();
 
-    /** Creates an instance. */
+    /**
+     * Creates an instance.
+     * @return a BLAS instance.
+     */
     static BLAS getInstance() {
         BLAS mkl = MKL();
         return mkl != null ? mkl : new smile.math.blas.openblas.OpenBLAS();
     }
 
-    /** Creates an MKL instance. */
+    /**
+     * Creates an MKL instance.
+     * @return a BLAS instance of MKL.
+     */
     static BLAS MKL() {
         org.slf4j.Logger logger = org.slf4j.LoggerFactory.getLogger(BLAS.class);
 
         try {
             Class<?> clazz = Class.forName("smile.math.blas.mkl.MKL");
             logger.info("smile-mkl module is available.");
-            return (BLAS) clazz.newInstance();
+            return (BLAS) clazz.getDeclaredConstructor().newInstance();
         } catch (Exception e) {
             logger.debug("Failed to create MKL instance: ", e);
         }
@@ -56,46 +62,58 @@ public interface BLAS {
 
     /**
      * Sums the absolute values of the elements of a vector.
-     * When working backward (incx < 0), each routine starts at the end of the
+     * When working backward ({@code incx < 0}), each routine starts at the end of the
      * vector and moves backward.
      *
      * @param n Number of vector elements to be summed.
      *
-     * @param x Array of dimension (n-1) * abs(incx)+ 1.
+     * @param x Array of dimension {@code (n-1) * abs(incx)+ 1}.
      *          Vector that contains elements to be summed.
      *
      * @param incx Increment between elements of x.
-     *             If incx = 0, the results will be unpredictable.
+     *             If {@code incx = 0}, the results will be unpredictable.
      *
      * @return Sum of the absolute values of the elements of the vector x.
-     *         If n <= 0, DASUM is set to 0.
+     *         If {@code n <= 0}, DASUM is set to 0.
      */
     double asum(int n, double[] x, int incx);
 
     /**
      * Sums the absolute values of the elements of a vector.
-     * When working backward (incx < 0), each routine starts at the end of the
+     * When working backward ({@code incx < 0}), each routine starts at the end of the
      * vector and moves backward.
      *
      * @param n Number of vector elements to be summed.
      *
-     * @param x Array of dimension (n-1) * abs(incx)+ 1.
+     * @param x Array of dimension {@code (n-1) * abs(incx)+ 1}.
      *          Vector that contains elements to be summed.
      *
      * @param incx Increment between elements of x.
-     *             If incx = 0, the results will be unpredictable.
+     *             If {@code incx = 0}, the results will be unpredictable.
      *
      * @return Sum of the absolute values of the elements of the vector x.
-     *         If n <= 0, DASUM is set to 0.
+     *         If {@code n <= 0}, DASUM is set to 0.
      */
     float asum(int n, float[] x, int incx);
 
-    /** Sums the absolute values of the elements of a vector. */
+    /**
+     * Sums the absolute values of the elements of a vector.
+     *
+     * @param x Vector that contains elements to be summed.
+     *
+     * @return Sum of the absolute values of the elements of the vector x.
+     */
     default double asum(double[] x) {
         return asum(x.length, x, 1);
     }
 
-    /** Sums the absolute values of the elements of a vector. */
+    /**
+     * Sums the absolute values of the elements of a vector.
+     *
+     * @param x Vector that contains elements to be summed.
+     *
+     * @return Sum of the absolute values of the elements of the vector x.
+     */
     default float asum(float[] x) {
         return asum(x.length, x, 1);
     }
@@ -105,29 +123,29 @@ public interface BLAS {
      * The result overwrites the initial values of vector y.
      * incx and incy specify the increment between two consecutive
      * elements of respectively vector x and y. When working backward
-     * (incx < 0 or incy < 0), each  routine  starts  at the end of the
+     * ({@code incx < 0 or incy < 0}), each  routine  starts  at the end of the
      * vector and moves backward.
      * <p>
-     * When  n <= 0, or alpha = 0., this routine returns immediately
+     * When  {@code n <= 0}, or {@code alpha = 0.}, this routine returns immediately
      * with no change in its arguments.
      *
-     * @param n Number of elements in the vectors. If n <= 0, these routines
+     * @param n Number of elements in the vectors. If {@code n <= 0}, these routines
      *          return without any computation.
      *
-     * @param alpha If alpha = 0 this routine returns without any computation.
+     * @param alpha If {@code alpha = 0} this routine returns without any computation.
      *
-     * @param x Input array of dimension (n-1) * |incx| + 1.  Contains the
+     * @param x Input array of dimension {@code (n-1) * |incx| + 1}.  Contains the
      *          vector to be scaled before summation.
      *
      * @param incx Increment between elements of x.
-     *             If incx = 0, the results will be unpredictable.
+     *             If {@code incx = 0}, the results will be unpredictable.
      *
-     * @param y Input and output array of dimension (n-1) * |incy| + 1.
+     * @param y Input and output array of dimension {@code (n-1) * |incy| + 1}.
      *          Before calling the routine, y contains the vector to be summed.
      *          After the routine ends, y contains the result of the summation.
      *
      * @param incy Increment between elements of y.
-     *             If incy = 0, the results will be unpredictable.
+     *             If {@code incy = 0}, the results will be unpredictable.
      */
     void axpy(int n, double alpha, double[] x, int incx, double[] y, int incy);
 
@@ -136,38 +154,66 @@ public interface BLAS {
      * The result overwrites the initial values of vector y.
      * incx and incy specify the increment between two consecutive
      * elements of respectively vector x and y. When working backward
-     * (incx < 0 or incy < 0), each  routine  starts  at the end of the
+     * ({@code incx < 0 or incy < 0}), each  routine  starts  at the end of the
      * vector and moves backward.
      * <p>
-     * When  n <= 0, or alpha = 0., this routine returns immediately
+     * When {@code n <= 0, or alpha = 0.}, this routine returns immediately
      * with no change in its arguments.
      *
-     * @param n Number of elements in the vectors. If n <= 0, these routines
+     * @param n Number of elements in the vectors. If {@code n <= 0}, these routines
      *          return without any computation.
      *
-     * @param alpha If alpha = 0 this routine returns without any computation.
+     * @param alpha If {@code alpha = 0} this routine returns without any computation.
      *
-     * @param x Input array of dimension (n-1) * |incx| + 1.  Contains the
+     * @param x Input array of dimension {@code (n-1) * |incx| + 1.}  Contains the
      *          vector to be scaled before summation.
      *
      * @param incx Increment between elements of x.
-     *             If incx = 0, the results will be unpredictable.
+     *             If {@code incx = 0}, the results will be unpredictable.
      *
-     * @param y Input and output array of dimension (n-1) * |incy| + 1.
+     * @param y Input and output array of dimension {@code (n-1) * |incy| + 1}.
      *          Before calling the routine, y contains the vector to be summed.
      *          After the routine ends, y contains the result of the summation.
      *
      * @param incy Increment between elements of y.
-     *             If incy = 0, the results will be unpredictable.
+     *             If {@code incy = 0}, the results will be unpredictable.
      */
     void axpy(int n, float alpha, float[] x, int incx, float[] y, int incy);
 
-    /** Computes a constant alpha times a vector x plus a vector y. */
+    /**
+     * Computes a constant alpha times a vector x plus a vector y.
+     * The result overwrites the initial values of vector y.
+     * <p>
+     * When {@code alpha = 0.}, this routine returns immediately
+     * with no change in its arguments.
+     *
+     * @param alpha If {@code alpha = 0} this routine returns without any computation.
+     *
+     * @param x The vector to be scaled before summation.
+     *
+     * @param y Input and output array.
+     *          Before calling the routine, y contains the vector to be summed.
+     *          After the routine ends, y contains the result of the summation.
+     */
     default void axpy(double alpha, double[] x, double[] y) {
         axpy(x.length, alpha, x, 1, y, 1);
     }
 
-    /** Computes a constant alpha times a vector x plus a vector y. */
+    /**
+     * Computes a constant alpha times a vector x plus a vector y.
+     * The result overwrites the initial values of vector y.
+     * <p>
+     * When {@code alpha = 0.}, this routine returns immediately
+     * with no change in its arguments.
+     *
+     * @param alpha If {@code alpha = 0} this routine returns without any computation.
+     *
+     * @param x The vector to be scaled before summation.
+     *
+     * @param y Input and output array.
+     *          Before calling the routine, y contains the vector to be summed.
+     *          After the routine ends, y contains the result of the summation.
+     */
     default void axpy(float alpha, float[] x, float[] y) {
         axpy(x.length, alpha, x, 1, y, 1);
     }
@@ -176,24 +222,24 @@ public interface BLAS {
      * Computes the dot product of two vectors.
      * incx and incy specify the increment between two consecutive
      * elements of respectively vector x and y. When working backward
-     * (incx < 0 or incy < 0), each  routine  starts  at the end of the
+     * ({@code incx < 0 or incy < 0}), each  routine  starts  at the end of the
      * vector and moves backward.
      *
      * @param n Number of elements in the vectors.
      *
-     * @param x Input array of dimension (n-1) * |incx| + 1.
+     * @param x Input array of dimension {@code (n-1) * |incx| + 1}.
      *          Array x contains the first vector operand.
      *
      * @param incx Increment between elements of x.
-     *             If incx = 0, the results will be unpredictable.
+     *             If {@code incx = 0}, the results will be unpredictable.
      *
-     * @param y Input array of dimension (n-1) * |incy| + 1.
+     * @param y Input array of dimension {@code (n-1) * |incy| + 1}.
      *          Array y contains the second vector operand.
      *
      * @param incy Increment between elements of y.
-     *             If incy = 0, the results will be unpredictable.
+     *             If {@code incy = 0}, the results will be unpredictable.
      *
-     * @return dot product. If n <= 0, return 0.
+     * @return dot product. If {@code n <= 0}, return 0.
      */
     double dot(int n, double[] x, int incx, double[] y, int incy);
 
@@ -201,33 +247,49 @@ public interface BLAS {
      * Computes the dot product of two vectors.
      * incx and incy specify the increment between two consecutive
      * elements of respectively vector x and y. When working backward
-     * (incx < 0 or incy < 0), each  routine  starts  at the end of the
+     * ({@code incx < 0 or incy < 0}), each  routine  starts  at the end of the
      * vector and moves backward.
      *
      * @param n Number of elements in the vectors.
      *
-     * @param x Input array of dimension (n-1) * |incx| + 1.
+     * @param x Input array of dimension {@code (n-1) * |incx| + 1}.
      *          Array x contains the first vector operand.
      *
      * @param incx Increment between elements of x.
-     *             If incx = 0, the results will be unpredictable.
+     *             If {@code incx = 0}, the results will be unpredictable.
      *
-     * @param y Input array of dimension (n-1) * |incy| + 1.
+     * @param y Input array of dimension {@code (n-1) * |incy| + 1}.
      *          Array y contains the second vector operand.
      *
      * @param incy Increment between elements of y.
-     *             If incy = 0, the results will be unpredictable.
+     *             If {@code incy = 0}, the results will be unpredictable.
      *
-     * @return dot product. If n <= 0, return 0.
+     * @return dot product. If {@code n <= 0}, return 0.
      */
     float dot(int n, float[] x, int incx, float[] y, int incy);
 
-    /** Computes the dot product of two vectors. */
+    /**
+     * Computes the dot product of two vectors.
+     *
+     * @param x Array x contains the first vector operand.
+     *
+     * @param y Array y contains the second vector operand.
+     *
+     * @return dot product. If {@code n <= 0}, return 0.
+     */
     default double dot(double[] x, double[] y) {
         return dot(x.length, x, 1, y, 1);
     }
 
-    /** Computes the dot product of two vectors. */
+    /**
+     * Computes the dot product of two vectors.
+     *
+     * @param x Array x contains the first vector operand.
+     *
+     * @param y Array y contains the second vector operand.
+     *
+     * @return dot product. If {@code n <= 0}, return 0.
+     */
     default float dot(float[] x, float[] y) {
         return dot(x.length, x, 1, y, 1);
     }
@@ -237,13 +299,13 @@ public interface BLAS {
      *
      * @param n Number of elements in the vectors.
      *
-     * @param x Input array of dimension (n-1) * |incx| + 1.
+     * @param x Input array of dimension {@code (n-1) * |incx| + 1}.
      *          Array x contains the vector operand.
      *
      * @param incx Increment between elements of x.
-     *             If incx = 0, the results will be unpredictable.
+     *             If {@code incx = 0}, the results will be unpredictable.
      *
-     * @return Euclidean norm. If n <= 0, return 0.
+     * @return Euclidean norm. If {@code n <= 0}, return 0.
      */
     double nrm2(int n, double[] x, int incx);
 
@@ -252,23 +314,35 @@ public interface BLAS {
      *
      * @param n Number of elements in the vectors.
      *
-     * @param x Input array of dimension (n-1) * |incx| + 1.
+     * @param x Input array of dimension {@code (n-1) * |incx| + 1}.
      *          Array x contains the vector operand.
      *
      * @param incx Increment between elements of x.
-     *             If incx = 0, the results will be unpredictable.
+     *             If {@code incx = 0}, the results will be unpredictable.
      *
-     * @return Euclidean norm. If n <= 0, return 0.
+     * @return Euclidean norm. If {@code n <= 0}, return 0.
      */
     float nrm2(int n, float[] x, int incx);
 
-    /** Computes the Euclidean (L2) norm of a vector. */
-    default double nrm2(double[] x, double[] y) {
+    /**
+     * Computes the Euclidean (L2) norm of a vector.
+     *
+     * @param x Array x contains the vector operand.
+     *
+     * @return Euclidean norm.
+     */
+    default double nrm2(double[] x) {
         return nrm2(x.length, x, 1);
     }
 
-    /** Computes the Euclidean (L2) norm of a vector. */
-    default float nrm2(float[] x, float[] y) {
+    /**
+     * Computes the Euclidean (L2) norm of a vector.
+     *
+     * @param x Array x contains the vector operand.
+     *
+     * @return Euclidean norm.
+     */
+    default float nrm2(float[] x) {
        return nrm2(x.length, x, 1);
     }
 
@@ -277,11 +351,13 @@ public interface BLAS {
      *
      * @param n Number of elements in the vectors.
      *
-     * @param x Input and output array of dimension (n-1) * |incx| + 1.
+     * @param alpha The scaling factor.
+     *
+     * @param x Input and output array of dimension {@code (n-1) * |incx| + 1}.
      *          Vector to be scaled.
      *
      * @param incx Increment between elements of x.
-     *             If incx = 0, the results will be unpredictable.
+     *             If {@code incx = 0}, the results will be unpredictable.
      */
     void scal(int n, double alpha, double[] x, int incx);
 
@@ -290,20 +366,34 @@ public interface BLAS {
      *
      * @param n Number of elements in the vectors.
      *
-     * @param x Input and output array of dimension (n-1) * |incx| + 1.
+     * @param alpha The scaling factor.
+     *
+     * @param x Input and output array of dimension {@code (n-1) * |incx| + 1}.
      *          Vector to be scaled.
      *
      * @param incx Increment between elements of x.
-     *             If incx = 0, the results will be unpredictable.
+     *             If {@code incx = 0}, the results will be unpredictable.
      */
     void scal(int n, float alpha, float[] x, int incx);
 
-    /** Scales a vector with a scalar. */
+    /**
+     * Scales a vector with a scalar.
+     *
+     * @param alpha The scaling factor.
+     *
+     * @param x Input and output vector to be scaled.
+     */
     default void scal(double alpha, double[] x) {
         scal(x.length, alpha, x, 1);
     }
 
-    /** Scales a vector with a scalar. */
+    /**
+     * Scales a vector with a scalar.
+     *
+     * @param alpha The scaling factor.
+     *
+     * @param x Input and output vector to be scaled.
+     */
     default void scal(float alpha, float[] x) {
         scal(x.length, alpha, x, 1);
     }
@@ -312,22 +402,22 @@ public interface BLAS {
      * Swaps two vectors.
      * incx and incy specify the increment between two consecutive
      * elements of respectively vector x and y. When working backward
-     * (incx < 0 or incy < 0), each  routine  starts  at the end of the
+     * ({@code incx < 0 or incy < 0}), each  routine  starts  at the end of the
      * vector and moves backward.
      *
      * @param n Number of elements in the vectors.
      *
-     * @param x Input and output array of dimension (n-1) * |incx| + 1.
+     * @param x Input and output array of dimension {@code (n-1) * |incx| + 1}.
      *          Vector to be swapped.
      *
      * @param incx Increment between elements of x.
-     *             If incx = 0, the results will be unpredictable.
+     *             If {@code incx = 0}, the results will be unpredictable.
      *
-     * @param y Input and output array of dimension (n-1) * |incy| + 1.
+     * @param y Input and output array of dimension {@code (n-1) * |incy| + 1}.
      *          Vector to be swapped.
      *
      * @param incy Increment between elements of y.
-     *             If incy = 0, the results will be unpredictable.
+     *             If {@code incy = 0}, the results will be unpredictable.
      */
     void swap(int n, double[] x, int incx, double[] y, int incy);
 
@@ -335,31 +425,43 @@ public interface BLAS {
      * Swaps two vectors.
      * incx and incy specify the increment between two consecutive
      * elements of respectively vector x and y. When working backward
-     * (incx < 0 or incy < 0), each  routine  starts  at the end of the
+     * ({@code incx < 0 or incy < 0}), each  routine  starts  at the end of the
      * vector and moves backward.
      *
      * @param n Number of elements in the vectors.
      *
-     * @param x Input and output array of dimension (n-1) * |incx| + 1.
+     * @param x Input and output array of dimension {@code (n-1) * |incx| + 1}.
      *          Vector to be swapped.
      *
      * @param incx Increment between elements of x.
-     *             If incx = 0, the results will be unpredictable.
+     *             If {@code incx = 0}, the results will be unpredictable.
      *
-     * @param y Input and output array of dimension (n-1) * |incy| + 1.
+     * @param y Input and output array of dimension {@code (n-1) * |incy| + 1}.
      *          Vector to be swapped.
      *
      * @param incy Increment between elements of y.
-     *             If incy = 0, the results will be unpredictable.
+     *             If {@code incy = 0}, the results will be unpredictable.
      */
     void swap(int n, float[] x, int incx, float[] y, int incy);
 
-    /** Swaps two vectors. */
+    /**
+     * Swaps two vectors.
+     *
+     * @param x Input and output vector to be swapped.
+     *
+     * @param y Input and output vector to be swapped.
+     */
     default void swap(double[] x, double[] y) {
         swap(x.length, x, 1, y, 1);
     }
 
-    /** Swaps two vectors. */
+    /**
+     * Swaps two vectors.
+     *
+     * @param x Input and output vector to be swapped.
+     *
+     * @param y Input and output vector to be swapped.
+     */
     default void swap(float[] x, float[] y) {
         swap(x.length, x, 1, y, 1);
     }
@@ -370,14 +472,14 @@ public interface BLAS {
      *
      * @param n Number of elements in the vectors.
      *
-     * @param x Input array of dimension (n-1) * |incx| + 1.
+     * @param x Input array of dimension {@code (n-1) * |incx| + 1}.
      *          Vector to be searched.
      *
      * @param incx Increment between elements of x.
-     *             If incx = 0, the results will be unpredictable.
+     *             If {@code incx = 0}, the results will be unpredictable.
      *
      * @return The first index of the maximum absolute value of vector x.
-     *         If n <= 0, return 0.
+     *         If {@code n <= 0}, return 0.
      */
     long iamax(int n, double[] x, int incx);
 
@@ -387,20 +489,24 @@ public interface BLAS {
      *
      * @param n Number of elements in the vectors.
      *
-     * @param x Input array of dimension (n-1) * |incx| + 1.
+     * @param x Input array of dimension {@code (n-1) * |incx| + 1}.
      *          Vector to be searched.
      *
      * @param incx Increment between elements of x.
-     *             If incx = 0, the results will be unpredictable.
+     *             If {@code incx = 0}, the results will be unpredictable.
      *
      * @return The first index of the maximum absolute value of vector x.
-     *         If n <= 0, return 0.
+     *         If {@code n <= 0}, return 0.
      */
     long iamax(int n, float[] x, int incx);
 
     /**
      * Searches a vector for the first occurrence of the the maximum absolute
      * value.
+     *
+     * @param x Vector to be searched.
+     *
+     * @return The first index of the maximum absolute value of vector x.
      */
     default long iamax(double[] x) {
         return iamax(x.length, x, 1);
@@ -409,6 +515,10 @@ public interface BLAS {
     /**
      * Searches a vector for the first occurrence of the the maximum absolute
      * value.
+     *
+     * @param x Vector to be searched.
+     *
+     * @return The first index of the maximum absolute value of vector x.
      */
     default long iamax(float[] x) {
         return iamax(x.length, x, 1);
@@ -416,13 +526,13 @@ public interface BLAS {
 
     /**
      * Performs the matrix-vector operation.
-     * <pre><code>
+     * <pre>{@code
      *     y := alpha*A*x + beta*y
-     * </code></pre>
+     * }</pre>
      * or
-     * <pre><code>
+     * <pre>{@code
      *     y := alpha*A'*x + beta*y
-     * </code></pre>
+     * }</pre>
      * where alpha and beta are scalars, x and y are vectors and A is an m by
      * n matrix.
      *
@@ -435,31 +545,31 @@ public interface BLAS {
      * @param A the leading m by n part of the array A must contain
      *          the matrix of coefficients.
      * @param lda the leading dimension of A as declared in the caller.
-     *            LDA must be at least max(1, m). The leading dimension
+     *            LDA must be at least {@code max(1, m)}. The leading dimension
      *            parameter allows use of BLAS/LAPACK routines on a submatrix
      *            of a larger matrix.
-     * @param x array of dimension at least (1 + (n - 1)*abs(incx))
-     *          when trans = 'N' or 'n' and
-     *          at least (1 + (m - 1)*abs(incx)) otherwise.
+     * @param x array of dimension at least {@code (1 + (n - 1) * abs(incx))}
+     *          when {@code trans = 'N' or 'n'} and
+     *          at least {@code (1 + (m - 1) * abs(incx))} otherwise.
      * @param incx the increment for the elements of x, which must not be zero.
      * @param beta the scalar beta. When beta is supplied as zero
      *             then y need not be set on input.
-     * @param y  array of dimension at least (1 + (m - 1)*abs(incy))
-     *           when trans = 'N' or 'n' and
-     *           at least (1 + (n - 1)*abs(incy)) otherwise.
+     * @param y  array of dimension at least {@code (1 + (m - 1) * abs(incy))}
+     *           when {@code trans = 'N' or 'n'} and
+     *           at least {@code (1 + (n - 1) * abs(incy))} otherwise.
      * @param incy the increment for the elements of y, which must not be zero.
      */
     void gemv(Layout layout, Transpose trans, int m, int n, double alpha, double[] A, int lda, double[] x, int incx, double beta, double[] y, int incy);
 
     /**
      * Performs the matrix-vector operation.
-     * <pre><code>
+     * <pre>{@code
      *     y := alpha*A*x + beta*y
-     * </code></pre>
+     * }</pre>
      * or
-     * <pre><code>
+     * <pre>{@code
      *     y := alpha*A'*x + beta*y
-     * </code></pre>
+     * }</pre>
      * where alpha and beta are scalars, x and y are vectors and A is an m by
      * n matrix.
      *
@@ -475,28 +585,28 @@ public interface BLAS {
      *            LDA must be at least max(1, m). The leading dimension
      *            parameter allows use of BLAS/LAPACK routines on a submatrix
      *            of a larger matrix.
-     * @param x array of dimension at least (1 + (n - 1)*abs(incx))
-     *          when trans = 'N' or 'n' and
-     *          at least (1 + (m - 1)*abs(incx)) otherwise.
+     * @param x array of dimension at least {@code (1 + (n - 1) * abs(incx))}
+     *          when {@code trans = 'N' or 'n'} and
+     *          at least {@code (1 + (m - 1) * abs(incx))} otherwise.
      * @param incx the increment for the elements of x, which must not be zero.
      * @param beta the scalar beta. When beta is supplied as zero
      *             then y need not be set on input.
-     * @param y  array of dimension at least (1 + (m - 1)*abs(incy))
-     *           when trans = 'N' or 'n' and
-     *           at least (1 + (n - 1)*abs(incy)) otherwise.
+     * @param y  array of dimension at least {@code (1 + (m - 1) * abs(incy))}
+     *           when {@code trans = 'N' or 'n'} and
+     *           at least {@code (1 + (n - 1) * abs(incy))} otherwise.
      * @param incy the increment for the elements of y, which must not be zero.
      */
     void gemv(Layout layout, Transpose trans, int m, int n, double alpha, DoubleBuffer A, int lda, DoubleBuffer x, int incx, double beta, DoubleBuffer y, int incy);
 
     /**
      * Performs the matrix-vector operation.
-     * <pre><code>
+     * <pre>{@code
      *     y := alpha*A*x + beta*y
-     * </code></pre>
+     * }</pre>
      * or
-     * <pre><code>
+     * <pre>{@code
      *     y := alpha*A'*x + beta*y
-     * </code></pre>
+     * }</pre>
      * where alpha and beta are scalars, x and y are vectors and A is an m by
      * n matrix.
      *
@@ -512,28 +622,28 @@ public interface BLAS {
      *            LDA must be at least max(1, m). The leading dimension
      *            parameter allows use of BLAS/LAPACK routines on a submatrix
      *            of a larger matrix.
-     * @param x array of dimension at least (1 + (n - 1)*abs(incx))
-     *          when trans = 'N' or 'n' and
-     *          at least (1 + (m - 1)*abs(incx)) otherwise.
+     * @param x array of dimension at least {@code (1 + (n - 1) * abs(incx))}
+     *          when {@code trans = 'N' or 'n'} and
+     *          at least {@code (1 + (m - 1)*abs(incx))} otherwise.
      * @param incx the increment for the elements of x, which must not be zero.
      * @param beta the scalar beta. When beta is supplied as zero
      *             then y need not be set on input.
-     * @param y  array of dimension at least (1 + (m - 1)*abs(incy))
-     *           when trans = 'N' or 'n' and
-     *           at least (1 + (n - 1)*abs(incy)) otherwise.
+     * @param y  array of dimension at least {@code (1 + (m - 1) * abs(incy))}
+     *           when {@code trans = 'N' or 'n'} and
+     *           at least {@code (1 + (n - 1) * abs(incy))} otherwise.
      * @param incy the increment for the elements of y, which must not be zero.
      */
     void gemv(Layout layout, Transpose trans, int m, int n, float alpha, float[] A, int lda, float[] x, int incx, float beta, float[] y, int incy);
 
     /**
      * Performs the matrix-vector operation.
-     * <pre><code>
+     * <pre>{@code
      *     y := alpha*A*x + beta*y
-     * </code></pre>
+     * }</pre>
      * or
-     * <pre><code>
+     * <pre>{@code
      *     y := alpha*A'*x + beta*y
-     * </code></pre>
+     * }</pre>
      * where alpha and beta are scalars, x and y are vectors and A is an m by
      * n matrix.
      *
@@ -549,28 +659,28 @@ public interface BLAS {
      *            LDA must be at least max(1, m). The leading dimension
      *            parameter allows use of BLAS/LAPACK routines on a submatrix
      *            of a larger matrix.
-     * @param x array of dimension at least (1 + (n - 1)*abs(incx))
-     *          when trans = 'N' or 'n' and
-     *          at least (1 + (m - 1)*abs(incx)) otherwise.
+     * @param x array of dimension at least {@code (1 + (n - 1) * abs(incx))}
+     *          when {@code trans = 'N' or 'n'} and
+     *          at least {@code (1 + (m - 1) * abs(incx))} otherwise.
      * @param incx the increment for the elements of x, which must not be zero.
      * @param beta the scalar beta. When beta is supplied as zero
      *             then y need not be set on input.
-     * @param y  array of dimension at least (1 + (m - 1)*abs(incy))
-     *           when trans = 'N' or 'n' and
-     *           at least (1 + (n - 1)*abs(incy)) otherwise.
+     * @param y  array of dimension at least {@code (1 + (m - 1) * abs(incy))}
+     *           when {@code trans = 'N' or 'n'} and
+     *           at least {@code (1 + (n - 1) * abs(incy))} otherwise.
      * @param incy the increment for the elements of y, which must not be zero.
      */
     void gemv(Layout layout, Transpose trans, int m, int n, float alpha, FloatBuffer A, int lda, FloatBuffer x, int incx, float beta, FloatBuffer y, int incy);
 
     /**
      * Performs the matrix-vector operation using a symmetric matrix.
-     * <pre><code>
+     * <pre>{@code
      *     y := alpha*A*x + beta*y
-     * </code></pre>
+     * }</pre>
      * or
-     * <pre><code>
+     * <pre>{@code
      *     y := alpha*A'*x + beta*y
-     * </code></pre>
+     * }</pre>
      * where alpha and beta are scalars, x and y are vectors and A is an m by
      * n matrix.
      *
@@ -581,24 +691,24 @@ public interface BLAS {
      * @param alpha the scalar alpha.
      * @param A the symmetric matrix.
      * @param lda the leading dimension of A as declared in the caller.
-     * @param x array of dimension at least (1 + (n - 1)*abs(incx)).
+     * @param x array of dimension at least {@code (1 + (n - 1) * abs(incx))}.
      * @param incx the increment for the elements of x, which must not be zero.
      * @param beta the scalar beta. When beta is supplied as zero
      *             then y need not be set on input.
-     * @param y  array of dimension at least (1 + (n - 1)*abs(incy)).
+     * @param y  array of dimension at least {@code (1 + (n - 1) * abs(incy))}.
      * @param incy the increment for the elements of y, which must not be zero.
      */
     void symv(Layout layout, UPLO uplo, int n, double alpha, double[] A, int lda, double[] x, int incx, double beta, double[] y, int incy);
 
     /**
      * Performs the matrix-vector operation using a symmetric matrix.
-     * <pre><code>
+     * <pre>{@code
      *     y := alpha*A*x + beta*y
-     * </code></pre>
+     * }</pre>
      * or
-     * <pre><code>
+     * <pre>{@code
      *     y := alpha*A'*x + beta*y
-     * </code></pre>
+     * }</pre>
      * where alpha and beta are scalars, x and y are vectors and A is an m by
      * n matrix.
      *
@@ -609,24 +719,24 @@ public interface BLAS {
      * @param alpha the scalar alpha.
      * @param A the symmetric matrix.
      * @param lda the leading dimension of A as declared in the caller.
-     * @param x array of dimension at least (1 + (n - 1)*abs(incx)).
+     * @param x array of dimension at least {@code (1 + (n - 1) * abs(incx))}.
      * @param incx the increment for the elements of x, which must not be zero.
      * @param beta the scalar beta. When beta is supplied as zero
      *             then y need not be set on input.
-     * @param y  array of dimension at least (1 + (n - 1)*abs(incy)).
+     * @param y  array of dimension at least {@code (1 + (n - 1) * abs(incy))}.
      * @param incy the increment for the elements of y, which must not be zero.
      */
     void symv(Layout layout, UPLO uplo, int n, double alpha, DoubleBuffer A, int lda, DoubleBuffer x, int incx, double beta, DoubleBuffer y, int incy);
 
     /**
      * Performs the matrix-vector operation using a symmetric matrix.
-     * <pre><code>
+     * <pre>{@code
      *     y := alpha*A*x + beta*y
-     * </code></pre>
+     * }</pre>
      * or
-     * <pre><code>
+     * <pre>{@code
      *     y := alpha*A'*x + beta*y
-     * </code></pre>
+     * }</pre>
      * where alpha and beta are scalars, x and y are vectors and A is an m by
      * n matrix.
      *
@@ -637,24 +747,24 @@ public interface BLAS {
      * @param alpha the scalar alpha.
      * @param A the symmetric matrix.
      * @param lda the leading dimension of A as declared in the caller.
-     * @param x array of dimension at least (1 + (n - 1)*abs(incx)).
+     * @param x array of dimension at least {@code (1 + (n - 1) * abs(incx))}.
      * @param incx the increment for the elements of x, which must not be zero.
      * @param beta the scalar beta. When beta is supplied as zero
      *             then y need not be set on input.
-     * @param y  array of dimension at least (1 + (n - 1)*abs(incy)).
+     * @param y  array of dimension at least {@code (1 + (n - 1) * abs(incy))}.
      * @param incy the increment for the elements of y, which must not be zero.
      */
     void symv(Layout layout, UPLO uplo, int n, float alpha, float[] A, int lda, float[] x, int incx, float beta, float[] y, int incy);
 
     /**
      * Performs the matrix-vector operation using a symmetric matrix.
-     * <pre><code>
+     * <pre>{@code
      *     y := alpha*A*x + beta*y
-     * </code></pre>
+     * }</pre>
      * or
-     * <pre><code>
+     * <pre>{@code
      *     y := alpha*A'*x + beta*y
-     * </code></pre>
+     * }</pre>
      * where alpha and beta are scalars, x and y are vectors and A is an m by
      * n matrix.
      *
@@ -665,24 +775,24 @@ public interface BLAS {
      * @param alpha the scalar alpha.
      * @param A the symmetric matrix.
      * @param lda the leading dimension of A as declared in the caller.
-     * @param x array of dimension at least (1 + (n - 1)*abs(incx)).
+     * @param x array of dimension at least {@code (1 + (n - 1) * abs(incx))}.
      * @param incx the increment for the elements of x, which must not be zero.
      * @param beta the scalar beta. When beta is supplied as zero
      *             then y need not be set on input.
-     * @param y  array of dimension at least (1 + (n - 1)*abs(incy)).
+     * @param y  array of dimension at least {@code (1 + (n - 1) * abs(incy))}.
      * @param incy the increment for the elements of y, which must not be zero.
      */
     void symv(Layout layout, UPLO uplo, int n, float alpha, FloatBuffer A, int lda, FloatBuffer x, int incx, float beta, FloatBuffer y, int incy);
 
     /**
      * Performs the matrix-vector operation using a symmetric packed matrix.
-     * <pre><code>
+     * <pre>{@code
      *     y := alpha*A*x + beta*y
-     * </code></pre>
+     * }</pre>
      * or
-     * <pre><code>
+     * <pre>{@code
      *     y := alpha*A'*x + beta*y
-     * </code></pre>
+     * }</pre>
      * where alpha and beta are scalars, x and y are vectors and A is an m by
      * n matrix.
      *
@@ -692,24 +802,24 @@ public interface BLAS {
      * @param n the number of rows/columns of the symmetric matrix A.
      * @param alpha the scalar alpha.
      * @param A the symmetric packed matrix.
-     * @param x array of dimension at least (1 + (n - 1)*abs(incx)).
+     * @param x array of dimension at least {@code (1 + (n - 1) * abs(incx))}.
      * @param incx the increment for the elements of x, which must not be zero.
      * @param beta the scalar beta. When beta is supplied as zero
      *             then y need not be set on input.
-     * @param y  array of dimension at least (1 + (n - 1)*abs(incy)).
+     * @param y  array of dimension at least {@code (1 + (n - 1) * abs(incy))}.
      * @param incy the increment for the elements of y, which must not be zero.
      */
     void spmv(Layout layout, UPLO uplo, int n, double alpha, double[] A, double[] x, int incx, double beta, double[] y, int incy);
 
     /**
      * Performs the matrix-vector operation using a symmetric packed matrix.
-     * <pre><code>
+     * <pre>{@code
      *     y := alpha*A*x + beta*y
-     * </code></pre>
+     * }</pre>
      * or
-     * <pre><code>
+     * <pre>{@code
      *     y := alpha*A'*x + beta*y
-     * </code></pre>
+     * }</pre>
      * where alpha and beta are scalars, x and y are vectors and A is an m by
      * n matrix.
      *
@@ -719,24 +829,24 @@ public interface BLAS {
      * @param n the number of rows/columns of the symmetric matrix A.
      * @param alpha the scalar alpha.
      * @param A the symmetric packed matrix.
-     * @param x array of dimension at least (1 + (n - 1)*abs(incx)).
+     * @param x array of dimension at least {@code (1 + (n - 1) * abs(incx))}.
      * @param incx the increment for the elements of x, which must not be zero.
      * @param beta the scalar beta. When beta is supplied as zero
      *             then y need not be set on input.
-     * @param y  array of dimension at least (1 + (n - 1)*abs(incy)).
+     * @param y  array of dimension at least {@code (1 + (n - 1) * abs(incy))}.
      * @param incy the increment for the elements of y, which must not be zero.
      */
     void spmv(Layout layout, UPLO uplo, int n, double alpha, DoubleBuffer A, DoubleBuffer x, int incx, double beta, DoubleBuffer y, int incy);
 
     /**
      * Performs the matrix-vector operation using a symmetric packed matrix.
-     * <pre><code>
+     * <pre>{@code
      *     y := alpha*A*x + beta*y
-     * </code></pre>
+     * }</pre>
      * or
-     * <pre><code>
+     * <pre>{@code
      *     y := alpha*A'*x + beta*y
-     * </code></pre>
+     * }</pre>
      * where alpha and beta are scalars, x and y are vectors and A is an m by
      * n matrix.
      *
@@ -746,24 +856,24 @@ public interface BLAS {
      * @param n the number of rows/columns of the symmetric matrix A.
      * @param alpha the scalar alpha.
      * @param A the symmetric packed matrix.
-     * @param x array of dimension at least (1 + (n - 1)*abs(incx)).
+     * @param x array of dimension at least {@code (1 + (n - 1) * abs(incx))}.
      * @param incx the increment for the elements of x, which must not be zero.
      * @param beta the scalar beta. When beta is supplied as zero
      *             then y need not be set on input.
-     * @param y  array of dimension at least (1 + (n - 1)*abs(incy)).
+     * @param y  array of dimension at least {@code (1 + (n - 1) * abs(incy))}.
      * @param incy the increment for the elements of y, which must not be zero.
      */
     void spmv(Layout layout, UPLO uplo, int n, float alpha, float[] A, float[] x, int incx, float beta, float[] y, int incy);
 
     /**
      * Performs the matrix-vector operation using a symmetric packed matrix.
-     * <pre><code>
+     * <pre>{@code
      *     y := alpha*A*x + beta*y
-     * </code></pre>
+     * }</pre>
      * or
-     * <pre><code>
+     * <pre>{@code
      *     y := alpha*A'*x + beta*y
-     * </code></pre>
+     * }</pre>
      * where alpha and beta are scalars, x and y are vectors and A is an m by
      * n matrix.
      *
@@ -773,24 +883,24 @@ public interface BLAS {
      * @param n the number of rows/columns of the symmetric matrix A.
      * @param alpha the scalar alpha.
      * @param A the symmetric packed matrix.
-     * @param x array of dimension at least (1 + (n - 1)*abs(incx)).
+     * @param x array of dimension at least {@code (1 + (n - 1) * abs(incx))}.
      * @param incx the increment for the elements of x, which must not be zero.
      * @param beta the scalar beta. When beta is supplied as zero
      *             then y need not be set on input.
-     * @param y  array of dimension at least (1 + (n - 1)*abs(incy)).
+     * @param y  array of dimension at least {@code (1 + (n - 1) * abs(incy))}
      * @param incy the increment for the elements of y, which must not be zero.
      */
     void spmv(Layout layout, UPLO uplo, int n, float alpha, FloatBuffer A, FloatBuffer x, int incx, float beta, FloatBuffer y, int incy);
 
     /**
      * Performs the matrix-vector operation using a triangular matrix.
-     * <pre><code>
+     * <pre>{@code
      *     x := A*x
-     * </code></pre>
+     * }</pre>
      * or
-     * <pre><code>
+     * <pre>{@code
      *     x := A'*x
-     * </code></pre>
+     * }</pre>
      *
      * @param layout matrix layout.
      * @param uplo the upper or lower triangular part of the matrix A is
@@ -801,22 +911,22 @@ public interface BLAS {
      * @param n the number of rows/columns of the triangular matrix A.
      * @param A the symmetric matrix.
      * @param lda the leading dimension of A as declared in the caller.
-     * @param x array of dimension at least (1 + (n - 1)*abs(incx))
-     *          when trans = 'N' or 'n' and
-     *          at least (1 + (m - 1)*abs(incx)) otherwise.
+     * @param x array of dimension at least {@code (1 + (n - 1) * abs(incx))}
+     *          when {@code trans = 'N' or 'n'} and
+     *          at least {@code (1 + (m - 1) * abs(incx))} otherwise.
      * @param incx the increment for the elements of x, which must not be zero.
      */
     void trmv(Layout layout, UPLO uplo, Transpose trans, Diag diag, int n, double[] A, int lda, double[] x, int incx);
 
     /**
      * Performs the matrix-vector operation using a triangular matrix.
-     * <pre><code>
+     * <pre>{@code
      *     x := A*x
-     * </code></pre>
+     * }</pre>
      * or
-     * <pre><code>
+     * <pre>{@code
      *     x := A'*x
-     * </code></pre>
+     * }</pre>
      *
      * @param layout matrix layout.
      * @param uplo the upper or lower triangular part of the matrix A is
@@ -827,22 +937,22 @@ public interface BLAS {
      * @param n the number of rows/columns of the triangular matrix A.
      * @param A the symmetric matrix.
      * @param lda the leading dimension of A as declared in the caller.
-     * @param x array of dimension at least (1 + (n - 1)*abs(incx))
-     *          when trans = 'N' or 'n' and
-     *          at least (1 + (m - 1)*abs(incx)) otherwise.
+     * @param x array of dimension at least {@code (1 + (n - 1) * abs(incx))}
+     *          when {@code trans = 'N' or 'n'} and
+     *          at least {@code (1 + (m - 1) * abs(incx))} otherwise.
      * @param incx the increment for the elements of x, which must not be zero.
      */
     void trmv(Layout layout, UPLO uplo, Transpose trans, Diag diag, int n, DoubleBuffer A, int lda, DoubleBuffer x, int incx);
 
     /**
      * Performs the matrix-vector operation using a triangular matrix.
-     * <pre><code>
+     * <pre>{@code
      *     x := A*x
-     * </code></pre>
+     * }</pre>
      * or
-     * <pre><code>
+     * <pre>{@code
      *     x := A'*x
-     * </code></pre>
+     * }</pre>
      *
      * @param layout matrix layout.
      * @param uplo the upper or lower triangular part of the matrix A is
@@ -853,22 +963,22 @@ public interface BLAS {
      * @param n the number of rows/columns of the triangular matrix A.
      * @param A the symmetric matrix.
      * @param lda the leading dimension of A as declared in the caller.
-     * @param x array of dimension at least (1 + (n - 1)*abs(incx))
-     *          when trans = 'N' or 'n' and
-     *          at least (1 + (m - 1)*abs(incx)) otherwise.
+     * @param x array of dimension at least {@code (1 + (n - 1) * abs(incx))}
+     *          when {@code trans = 'N' or 'n'} and
+     *          at least {@code (1 + (m - 1) * abs(incx))} otherwise.
      * @param incx the increment for the elements of x, which must not be zero.
      */
     void trmv(Layout layout, UPLO uplo, Transpose trans, Diag diag, int n, float[] A, int lda, float[] x, int incx);
 
     /**
      * Performs the matrix-vector operation using a triangular matrix.
-     * <pre><code>
+     * <pre>{@code
      *     x := A*x
-     * </code></pre>
+     * }</pre>
      * or
-     * <pre><code>
+     * <pre>{@code
      *     x := A'*x
-     * </code></pre>
+     * }</pre>
      *
      * @param layout matrix layout.
      * @param uplo the upper or lower triangular part of the matrix A is
@@ -879,22 +989,22 @@ public interface BLAS {
      * @param n the number of rows/columns of the triangular matrix A.
      * @param A the symmetric matrix.
      * @param lda the leading dimension of A as declared in the caller.
-     * @param x array of dimension at least (1 + (n - 1)*abs(incx))
-     *          when trans = 'N' or 'n' and
-     *          at least (1 + (m - 1)*abs(incx)) otherwise.
+     * @param x array of dimension at least {@code (1 + (n - 1) * abs(incx))}
+     *          when {@code trans = 'N' or 'n'} and
+     *          at least {@code (1 + (m - 1) * abs(incx))} otherwise.
      * @param incx the increment for the elements of x, which must not be zero.
      */
     void trmv(Layout layout, UPLO uplo, Transpose trans, Diag diag, int n, FloatBuffer A, int lda, FloatBuffer x, int incx);
 
     /**
      * Performs the matrix-vector operation using a triangular packed matrix.
-     * <pre><code>
+     * <pre>{@code
      *     x := A*x
-     * </code></pre>
+     * }</pre>
      * or
-     * <pre><code>
+     * <pre>{@code
      *     y := A'*x
-     * </code></pre>
+     * }</pre>
      *
      * @param layout matrix layout.
      * @param uplo the upper or lower triangular part of the matrix A is
@@ -904,20 +1014,20 @@ public interface BLAS {
      * @param diag unit diagonal or not.
      * @param n the number of rows/columns of the triangular matrix A.
      * @param A the symmetric packed matrix.
-     * @param x array of dimension at least (1 + (n - 1)*abs(incx)).
+     * @param x array of dimension at least {@code (1 + (n - 1) * abs(incx))}.
      * @param incx the increment for the elements of x, which must not be zero.
      */
     void tpmv(Layout layout, UPLO uplo, Transpose trans, Diag diag, int n, double[] A, double[] x, int incx);
 
     /**
      * Performs the matrix-vector operation using a triangular packed matrix.
-     * <pre><code>
+     * <pre>{@code
      *     x := A*x
-     * </code></pre>
+     * }</pre>
      * or
-     * <pre><code>
+     * <pre>{@code
      *     y := A'*x
-     * </code></pre>
+     * }</pre>
      *
      * @param layout matrix layout.
      * @param uplo the upper or lower triangular part of the matrix A is
@@ -927,20 +1037,20 @@ public interface BLAS {
      * @param diag unit diagonal or not.
      * @param n the number of rows/columns of the triangular matrix A.
      * @param A the symmetric packed matrix.
-     * @param x array of dimension at least (1 + (n - 1)*abs(incx)).
+     * @param x array of dimension at least {@code (1 + (n - 1) * abs(incx))}.
      * @param incx the increment for the elements of x, which must not be zero.
      */
     void tpmv(Layout layout, UPLO uplo, Transpose trans, Diag diag, int n, DoubleBuffer A, DoubleBuffer x, int incx);
 
     /**
      * Performs the matrix-vector operation using a triangular packed matrix.
-     * <pre><code>
+     * <pre>{@code
      *     x := A*x
-     * </code></pre>
+     * }</pre>
      * or
-     * <pre><code>
+     * <pre>{@code
      *     x := A'*x
-     * </code></pre>
+     * }</pre>
      *
      * @param layout matrix layout.
      * @param uplo the upper or lower triangular part of the matrix A is
@@ -950,20 +1060,20 @@ public interface BLAS {
      * @param diag unit diagonal or not.
      * @param n the number of rows/columns of the triangular matrix A.
      * @param A the symmetric packed matrix.
-     * @param x array of dimension at least (1 + (n - 1)*abs(incx)).
+     * @param x array of dimension at least {@code (1 + (n - 1) * abs(incx))}.
      * @param incx the increment for the elements of x, which must not be zero.
      */
     void tpmv(Layout layout, UPLO uplo, Transpose trans, Diag diag, int n, float[] A, float[] x, int incx);
 
     /**
      * Performs the matrix-vector operation using a triangular packed matrix.
-     * <pre><code>
+     * <pre>{@code
      *     x := A*x
-     * </code></pre>
+     * }</pre>
      * or
-     * <pre><code>
+     * <pre>{@code
      *     x := A'*x
-     * </code></pre>
+     * }</pre>
      *
      * @param layout matrix layout.
      * @param uplo the upper or lower triangular part of the matrix A is
@@ -973,20 +1083,20 @@ public interface BLAS {
      * @param diag unit diagonal or not.
      * @param n the number of rows/columns of the triangular matrix A.
      * @param A the symmetric packed matrix.
-     * @param x array of dimension at least (1 + (n - 1)*abs(incx)).
+     * @param x array of dimension at least {@code (1 + (n - 1) * abs(incx))}.
      * @param incx the increment for the elements of x, which must not be zero.
      */
     void tpmv(Layout layout, UPLO uplo, Transpose trans, Diag diag, int n, FloatBuffer A, FloatBuffer x, int incx);
 
     /**
      * Performs the matrix-vector operation using a band matrix.
-     * <pre><code>
+     * <pre>{@code
      *     y := alpha*A*x + beta*y
-     * </code></pre>
+     * }</pre>
      * or
-     * <pre><code>
+     * <pre>{@code
      *     y := alpha*A'*x + beta*y
-     * </code></pre>
+     * }</pre>
      * where alpha and beta are scalars, x and y are vectors and A is an m by
      * n matrix.
      *
@@ -1000,28 +1110,28 @@ public interface BLAS {
      * @param alpha the scalar alpha.
      * @param A the band matrix.
      * @param lda the leading dimension of A as declared in the caller.
-     * @param x array of dimension at least (1 + (n - 1)*abs(incx))
-     *          when trans = 'N' or 'n' and
-     *          at least (1 + (m - 1)*abs(incx)) otherwise.
+     * @param x array of dimension at least {@code (1 + (n - 1) * abs(incx))}
+     *          when {@code trans = 'N' or 'n'} and
+     *          at least {@code (1 + (m - 1) * abs(incx))} otherwise.
      * @param incx the increment for the elements of x, which must not be zero.
      * @param beta the scalar beta. When beta is supplied as zero
      *             then y need not be set on input.
-     * @param y  array of dimension at least (1 + (m - 1)*abs(incy))
-     *           when trans = 'N' or 'n' and
-     *           at least (1 + (n - 1)*abs(incy)) otherwise.
+     * @param y  array of dimension at least {@code (1 + (m - 1) * abs(incy))}
+     *          when {@code trans = 'N' or 'n'} and
+     *          at least {@code (1 + (n - 1) * abs(incy))} otherwise.
      * @param incy the increment for the elements of y, which must not be zero.
      */
     void gbmv(Layout layout, Transpose trans, int m, int n, int kl, int ku, double alpha, double[] A, int lda, double[] x, int incx, double beta, double[] y, int incy);
 
     /**
      * Performs the matrix-vector operation using a band matrix.
-     * <pre><code>
+     * <pre>{@code
      *     y := alpha*A*x + beta*y
-     * </code></pre>
+     * }</pre>
      * or
-     * <pre><code>
+     * <pre>{@code
      *     y := alpha*A'*x + beta*y
-     * </code></pre>
+     * }</pre>
      * where alpha and beta are scalars, x and y are vectors and A is an m by
      * n matrix.
      *
@@ -1035,28 +1145,28 @@ public interface BLAS {
      * @param alpha the scalar alpha.
      * @param A the band matrix.
      * @param lda the leading dimension of A as declared in the caller.
-     * @param x array of dimension at least (1 + (n - 1)*abs(incx))
-     *          when trans = 'N' or 'n' and
-     *          at least (1 + (m - 1)*abs(incx)) otherwise.
+     * @param x array of dimension at least (1 + (n - 1) * abs(incx))
+     *          when {@code trans = 'N' or 'n'} and
+     *          at least {@code (1 + (m - 1) * abs(incx))} otherwise.
      * @param incx the increment for the elements of x, which must not be zero.
      * @param beta the scalar beta. When beta is supplied as zero
      *             then y need not be set on input.
-     * @param y  array of dimension at least (1 + (m - 1)*abs(incy))
-     *           when trans = 'N' or 'n' and
-     *           at least (1 + (n - 1)*abs(incy)) otherwise.
+     * @param y  array of dimension at least {@code (1 + (m - 1) * abs(incy))}
+     *          when {@code trans = 'N' or 'n'} and
+     *          at least {@code (1 + (n - 1) * abs(incy))} otherwise.
      * @param incy the increment for the elements of y, which must not be zero.
      */
     void gbmv(Layout layout, Transpose trans, int m, int n, int kl, int ku, double alpha, DoubleBuffer A, int lda, DoubleBuffer x, int incx, double beta, DoubleBuffer y, int incy);
 
     /**
      * Performs the matrix-vector operation using a band matrix.
-     * <pre><code>
+     * <pre>{@code
      *     y := alpha*A*x + beta*y
-     * </code></pre>
+     * }</pre>
      * or
-     * <pre><code>
+     * <pre>{@code
      *     y := alpha*A'*x + beta*y
-     * </code></pre>
+     * }</pre>
      * where alpha and beta are scalars, x and y are vectors and A is an m by
      * n matrix.
      *
@@ -1070,28 +1180,28 @@ public interface BLAS {
      * @param alpha the scalar alpha.
      * @param A the band matrix.
      * @param lda the leading dimension of A as declared in the caller.
-     * @param x array of dimension at least (1 + (n - 1)*abs(incx))
-     *          when trans = 'N' or 'n' and
-     *          at least (1 + (m - 1)*abs(incx)) otherwise.
+     * @param x array of dimension at least (1 + (n - 1) * abs(incx))
+     *          when {@code trans = 'N' or 'n'} and
+     *          at least {@code (1 + (m - 1) * abs(incx))} otherwise.
      * @param incx the increment for the elements of x, which must not be zero.
      * @param beta the scalar beta. When beta is supplied as zero
      *             then y need not be set on input.
-     * @param y  array of dimension at least (1 + (m - 1)*abs(incy))
-     *           when trans = 'N' or 'n' and
-     *           at least (1 + (n - 1)*abs(incy)) otherwise.
+     * @param y  array of dimension at least {@code (1 + (m - 1) * abs(incy))}
+     *          when {@code trans = 'N' or 'n'} and
+     *          at least {@code (1 + (n - 1) * abs(incy))} otherwise.
      * @param incy the increment for the elements of y, which must not be zero.
      */
     void gbmv(Layout layout, Transpose trans, int m, int n, int kl, int ku, float alpha, float[] A, int lda, float[] x, int incx, float beta, float[] y, int incy);
 
     /**
      * Performs the matrix-vector operation using a band matrix.
-     * <pre><code>
+     * <pre>{@code
      *     y := alpha*A*x + beta*y
-     * </code></pre>
+     * }</pre>
      * or
-     * <pre><code>
+     * <pre>{@code
      *     y := alpha*A'*x + beta*y
-     * </code></pre>
+     * }</pre>
      * where alpha and beta are scalars, x and y are vectors and A is an m by
      * n matrix.
      *
@@ -1105,28 +1215,28 @@ public interface BLAS {
      * @param alpha the scalar alpha.
      * @param A the band matrix.
      * @param lda the leading dimension of A as declared in the caller.
-     * @param x array of dimension at least (1 + (n - 1)*abs(incx))
-     *          when trans = 'N' or 'n' and
-     *          at least (1 + (m - 1)*abs(incx)) otherwise.
+     * @param x array of dimension at least (1 + (n - 1) * abs(incx))
+     *          when {@code trans = 'N' or 'n'} and
+     *          at least {@code (1 + (m - 1) * abs(incx))} otherwise.
      * @param incx the increment for the elements of x, which must not be zero.
      * @param beta the scalar beta. When beta is supplied as zero
      *             then y need not be set on input.
-     * @param y  array of dimension at least (1 + (m - 1)*abs(incy))
-     *           when trans = 'N' or 'n' and
-     *           at least (1 + (n - 1)*abs(incy)) otherwise.
+     * @param y  array of dimension at least {@code (1 + (m - 1) * abs(incy))}
+     *          when {@code trans = 'N' or 'n'} and
+     *          at least {@code (1 + (n - 1) * abs(incy))} otherwise.
      * @param incy the increment for the elements of y, which must not be zero.
      */
     void gbmv(Layout layout, Transpose trans, int m, int n, int kl, int ku, float alpha, FloatBuffer A, int lda, FloatBuffer x, int incx, float beta, FloatBuffer y, int incy);
 
     /**
      * Performs the matrix-vector operation using a symmetric band matrix.
-     * <pre><code>
+     * <pre>{@code
      *     y := alpha*A*x + beta*y
-     * </code></pre>
+     * }</pre>
      * or
-     * <pre><code>
+     * <pre>{@code
      *     y := alpha*A'*x + beta*y
-     * </code></pre>
+     * }</pre>
      * where alpha and beta are scalars, x and y are vectors and A is an m by
      * n matrix.
      *
@@ -1138,24 +1248,24 @@ public interface BLAS {
      * @param alpha the scalar alpha.
      * @param A the symmetric band matrix.
      * @param lda the leading dimension of A as declared in the caller.
-     * @param x array of dimension at least (1 + (n - 1)*abs(incx)),
+     * @param x array of dimension at least {@code (1 + (n - 1) * abs(incx))},
      * @param incx the increment for the elements of x, which must not be zero.
      * @param beta the scalar beta. When beta is supplied as zero
      *             then y need not be set on input.
-     * @param y  array of dimension at least (1 + (n - 1)*abs(incy)),
+     * @param y  array of dimension at least {@code (1 + (n - 1) * abs(incy))},
      * @param incy the increment for the elements of y, which must not be zero.
      */
     void sbmv(Layout layout, UPLO uplo, int n, int k, double alpha, double[] A, int lda, double[] x, int incx, double beta, double[] y, int incy);
 
     /**
      * Performs the matrix-vector operation using a symmetric band matrix.
-     * <pre><code>
+     * <pre>{@code
      *     y := alpha*A*x + beta*y
-     * </code></pre>
+     * }</pre>
      * or
-     * <pre><code>
+     * <pre>{@code
      *     y := alpha*A'*x + beta*y
-     * </code></pre>
+     * }</pre>
      * where alpha and beta are scalars, x and y are vectors and A is an m by
      * n matrix.
      *
@@ -1167,24 +1277,24 @@ public interface BLAS {
      * @param alpha the scalar alpha.
      * @param A the symmetric band matrix.
      * @param lda the leading dimension of A as declared in the caller.
-     * @param x array of dimension at least (1 + (n - 1)*abs(incx)),
+     * @param x array of dimension at least {@code (1 + (n - 1) * abs(incx))},
      * @param incx the increment for the elements of x, which must not be zero.
      * @param beta the scalar beta. When beta is supplied as zero
      *             then y need not be set on input.
-     * @param y  array of dimension at least (1 + (n - 1)*abs(incy)),
+     * @param y  array of dimension at least {@code (1 + (n - 1) * abs(incy))},
      * @param incy the increment for the elements of y, which must not be zero.
      */
     void sbmv(Layout layout, UPLO uplo, int n, int k, double alpha, DoubleBuffer A, int lda, DoubleBuffer x, int incx, double beta, DoubleBuffer y, int incy);
 
     /**
      * Performs the matrix-vector operation using a symmetric band matrix.
-     * <pre><code>
+     * <pre>{@code
      *     y := alpha*A*x + beta*y
-     * </code></pre>
+     * }</pre>
      * or
-     * <pre><code>
+     * <pre>{@code
      *     y := alpha*A'*x + beta*y
-     * </code></pre>
+     * }</pre>
      * where alpha and beta are scalars, x and y are vectors and A is an m by
      * n matrix.
      *
@@ -1196,24 +1306,24 @@ public interface BLAS {
      * @param alpha the scalar alpha.
      * @param A the symmetric band matrix.
      * @param lda the leading dimension of A as declared in the caller.
-     * @param x array of dimension at least (1 + (n - 1)*abs(incx)).
+     * @param x array of dimension at least {@code (1 + (n - 1) * abs(incx))}.
      * @param incx the increment for the elements of x, which must not be zero.
      * @param beta the scalar beta. When beta is supplied as zero
      *             then y need not be set on input.
-     * @param y  array of dimension at least (1 + (n - 1)*abs(incy)).
+     * @param y  array of dimension at least {@code (1 + (n - 1) * abs(incy))}.
      * @param incy the increment for the elements of y, which must not be zero.
      */
     void sbmv(Layout layout, UPLO uplo, int n, int k, float alpha, float[] A, int lda, float[] x, int incx, float beta, float[] y, int incy);
 
     /**
      * Performs the matrix-vector operation using a symmetric band matrix.
-     * <pre><code>
+     * <pre>{@code
      *     y := alpha*A*x + beta*y
-     * </code></pre>
+     * }</pre>
      * or
-     * <pre><code>
+     * <pre>{@code
      *     y := alpha*A'*x + beta*y
-     * </code></pre>
+     * }</pre>
      * where alpha and beta are scalars, x and y are vectors and A is an m by
      * n matrix.
      *
@@ -1225,28 +1335,28 @@ public interface BLAS {
      * @param alpha the scalar alpha.
      * @param A the symmetric band matrix.
      * @param lda the leading dimension of A as declared in the caller.
-     * @param x array of dimension at least (1 + (n - 1)*abs(incx)).
+     * @param x array of dimension at least {@code (1 + (n - 1) * abs(incx))}.
      * @param incx the increment for the elements of x, which must not be zero.
      * @param beta the scalar beta. When beta is supplied as zero
      *             then y need not be set on input.
-     * @param y  array of dimension at least (1 + (n - 1)*abs(incy)).
+     * @param y  array of dimension at least {@code (1 + (n - 1) * abs(incy))}.
      * @param incy the increment for the elements of y, which must not be zero.
      */
     void sbmv(Layout layout, UPLO uplo, int n, int k, float alpha, FloatBuffer A, int lda, FloatBuffer x, int incx, float beta, FloatBuffer y, int incy);
 
     /**
      * Performs the rank-1 update operation.
-     * <pre><code>
+     * <pre>{@code
      *     A := A + alpha*x*y'
-     * </code></pre>
+     * }</pre>
      *
      * @param layout matrix layout.
      * @param m the number of rows of the matrix A.
      * @param n the number of columns of the matrix A.
      * @param alpha the scalar alpha.
-     * @param x array of dimension at least (1 + (m - 1)*abs(incx)).
+     * @param x array of dimension at least {@code (1 + (m - 1) * abs(incx))}.
      * @param incx the increment for the elements of x, which must not be zero.
-     * @param y  array of dimension at least (1 + (n - 1)*abs(incy)).
+     * @param y  array of dimension at least {@code (1 + (n - 1) * abs(incy))}.
      * @param incy the increment for the elements of y, which must not be zero.
      * @param A the leading m by n part of the array A must contain
      *          the matrix of coefficients.
@@ -1259,17 +1369,17 @@ public interface BLAS {
 
     /**
      * Performs the rank-1 update operation.
-     * <pre><code>
+     * <pre>{@code
      *     A := A + alpha*x*y'
-     * </code></pre>
+     * }</pre>
      *
      * @param layout matrix layout.
      * @param m the number of rows of the matrix A.
      * @param n the number of columns of the matrix A.
      * @param alpha the scalar alpha.
-     * @param x array of dimension at least (1 + (m - 1)*abs(incx)).
+     * @param x array of dimension at least {@code (1 + (m - 1) * abs(incx))}.
      * @param incx the increment for the elements of x, which must not be zero.
-     * @param y  array of dimension at least (1 + (n - 1)*abs(incy)).
+     * @param y  array of dimension at least {@code (1 + (n - 1) * abs(incy))}.
      * @param incy the increment for the elements of y, which must not be zero.
      * @param A the leading m by n part of the array A must contain
      *          the matrix of coefficients.
@@ -1282,17 +1392,17 @@ public interface BLAS {
 
     /**
      * Performs the rank-1 update operation.
-     * <pre><code>
+     * <pre>{@code
      *     A := A + alpha*x*y'
-     * </code></pre>
+     * }</pre>
      *
      * @param layout matrix layout.
      * @param m the number of rows of the matrix A.
      * @param n the number of columns of the matrix A.
      * @param alpha the scalar alpha.
-     * @param x array of dimension at least (1 + (m - 1)*abs(incx)).
+     * @param x array of dimension at least {@code (1 + (m - 1) * abs(incx))}.
      * @param incx the increment for the elements of x, which must not be zero.
-     * @param y  array of dimension at least (1 + (n - 1)*abs(incy)).
+     * @param y  array of dimension at least {@code (1 + (n - 1) * abs(incy))}.
      * @param incy the increment for the elements of y, which must not be zero.
      * @param A the leading m by n part of the array A must contain
      *          the matrix of coefficients.
@@ -1305,17 +1415,17 @@ public interface BLAS {
 
     /**
      * Performs the rank-1 update operation.
-     * <pre><code>
+     * <pre>{@code
      *     A := A + alpha*x*y'
-     * </code></pre>
+     * }</pre>
      *
      * @param layout matrix layout.
      * @param m the number of rows of the matrix A.
      * @param n the number of columns of the matrix A.
      * @param alpha the scalar alpha.
-     * @param x array of dimension at least (1 + (m - 1)*abs(incx)).
+     * @param x array of dimension at least {@code (1 + (m - 1) * abs(incx))}.
      * @param incx the increment for the elements of x, which must not be zero.
-     * @param y  array of dimension at least (1 + (n - 1)*abs(incy)).
+     * @param y  array of dimension at least {@code (1 + (n - 1) * abs(incy))}.
      * @param incy the increment for the elements of y, which must not be zero.
      * @param A the leading m by n part of the array A must contain
      *          the matrix of coefficients.
@@ -1328,16 +1438,16 @@ public interface BLAS {
 
     /**
      * Performs the rank-1 update operation to symmetric matrix.
-     * <pre><code>
+     * <pre>{@code
      *     A := A + alpha*x*x'
-     * </code></pre>
+     * }</pre>
      *
      * @param layout matrix layout.
      * @param uplo the upper or lower triangular part of the matrix A is
      *             to be referenced.
      * @param n the number of columns of the matrix A.
      * @param alpha the scalar alpha.
-     * @param x array of dimension at least (1 + (m - 1)*abs(incx)).
+     * @param x array of dimension at least {@code (1 + (m - 1) * abs(incx))}.
      * @param incx the increment for the elements of x, which must not be zero.
      * @param A the leading n by n part of the array A must contain
      *          the matrix of coefficients.
@@ -1350,16 +1460,16 @@ public interface BLAS {
 
     /**
      * Performs the rank-1 update operation to symmetric matrix.
-     * <pre><code>
+     * <pre>{@code
      *     A := A + alpha*x*x'
-     * </code></pre>
+     * }</pre>
      *
      * @param layout matrix layout.
      * @param uplo the upper or lower triangular part of the matrix A is
      *             to be referenced.
      * @param n the number of columns of the matrix A.
      * @param alpha the scalar alpha.
-     * @param x array of dimension at least (1 + (m - 1)*abs(incx)).
+     * @param x array of dimension at least {@code (1 + (m - 1) * abs(incx))}.
      * @param incx the increment for the elements of x, which must not be zero.
      * @param A the leading n by n part of the array A must contain
      *          the matrix of coefficients.
@@ -1372,16 +1482,16 @@ public interface BLAS {
 
     /**
      * Performs the rank-1 update operation to symmetric matrix.
-     * <pre><code>
+     * <pre>{@code
      *     A := A + alpha*x*x'
-     * </code></pre>
+     * }</pre>
      *
      * @param layout matrix layout.
      * @param uplo the upper or lower triangular part of the matrix A is
      *             to be referenced.
      * @param n the number of columns of the matrix A.
      * @param alpha the scalar alpha.
-     * @param x array of dimension at least (1 + (m - 1)*abs(incx)).
+     * @param x array of dimension at least {@code (1 + (m - 1) * abs(incx))}.
      * @param incx the increment for the elements of x, which must not be zero.
      *          the matrix of coefficients.
      * @param A the leading n by n part of the array A must contain
@@ -1395,16 +1505,16 @@ public interface BLAS {
 
     /**
      * Performs the rank-1 update operation to symmetric matrix.
-     * <pre><code>
+     * <pre>{@code
      *     A := A + alpha*x*x'
-     * </code></pre>
+     * }</pre>
      *
      * @param layout matrix layout.
      * @param uplo the upper or lower triangular part of the matrix A is
      *             to be referenced.
      * @param n the number of columns of the matrix A.
      * @param alpha the scalar alpha.
-     * @param x array of dimension at least (1 + (m - 1)*abs(incx)).
+     * @param x array of dimension at least {@code (1 + (m - 1) * abs(incx))}.
      * @param incx the increment for the elements of x, which must not be zero.
      *          the matrix of coefficients.
      * @param A the leading n by n part of the array A must contain
@@ -1418,32 +1528,32 @@ public interface BLAS {
 
     /**
      * Performs the rank-1 update operation to symmetric packed matrix.
-     * <pre><code>
+     * <pre>{@code
      *     A := A + alpha*x*x'
-     * </code></pre>
+     * }</pre>
      *
      * @param layout matrix layout.
      * @param uplo the upper or lower triangular part of the matrix A is
      *             to be referenced.
      * @param n the number of columns of the matrix A.
      * @param alpha the scalar alpha.
-     * @param x array of dimension at least (1 + (m - 1)*abs(incx)).
+     * @param x array of dimension at least {@code (1 + (m - 1) * abs(incx))}.
      * @param incx the increment for the elements of x, which must not be zero.
      * @param A the symmetric packed matrix.
      */
     void spr(Layout layout, UPLO uplo, int n, double alpha, double[] x, int incx, double[] A);
     /**
      * Performs the rank-1 update operation to symmetric packed matrix.
-     * <pre><code>
+     * <pre>{@code
      *     A := A + alpha*x*x'
-     * </code></pre>
+     * }</pre>
      *
      * @param layout matrix layout.
      * @param uplo the upper or lower triangular part of the matrix A is
      *             to be referenced.
      * @param n the number of columns of the matrix A.
      * @param alpha the scalar alpha.
-     * @param x array of dimension at least (1 + (m - 1)*abs(incx)).
+     * @param x array of dimension at least {@code (1 + (m - 1) * abs(incx))}.
      * @param incx the increment for the elements of x, which must not be zero.
      * @param A the symmetric packed matrix.
      */
@@ -1451,18 +1561,17 @@ public interface BLAS {
 
     /**
      * Performs the rank-1 update operation to symmetric packed matrix.
-     * <pre><code>
+     * <pre>{@code
      *     A := A + alpha*x*x'
-     * </code></pre>
+     * }</pre>
      *
      * @param layout matrix layout.
      * @param uplo the upper or lower triangular part of the matrix A is
      *             to be referenced.
      * @param n the number of columns of the matrix A.
      * @param alpha the scalar alpha.
-     * @param x array of dimension at least (1 + (m - 1)*abs(incx)).
+     * @param x array of dimension at least {@code (1 + (m - 1) * abs(incx))}.
      * @param incx the increment for the elements of x, which must not be zero.
-     *          the matrix of coefficients.
      * @param A the symmetric packed matrix.
      */
     void spr(Layout layout, UPLO uplo, int n, float alpha, float[] x, int incx, float[] A);
@@ -1470,27 +1579,26 @@ public interface BLAS {
 
     /**
      * Performs the rank-1 update operation to symmetric packed matrix.
-     * <pre><code>
+     * <pre>{@code
      *     A := A + alpha*x*x'
-     * </code></pre>
+     * }</pre>
      *
      * @param layout matrix layout.
      * @param uplo the upper or lower triangular part of the matrix A is
      *             to be referenced.
      * @param n the number of columns of the matrix A.
      * @param alpha the scalar alpha.
-     * @param x array of dimension at least (1 + (m - 1)*abs(incx)).
+     * @param x array of dimension at least {@code (1 + (m - 1) * abs(incx))}.
      * @param incx the increment for the elements of x, which must not be zero.
-     *          the matrix of coefficients.
      * @param A the symmetric packed matrix.
      */
     void spr(Layout layout, UPLO uplo, int n, float alpha, FloatBuffer x, int incx, FloatBuffer A);
 
     /**
      * Performs the matrix-matrix operation.
-     * <pre><code>
+     * <pre>{@code
      *     C := alpha*A*B + beta*C
-     * </code></pre>
+     * }</pre>
      *
      * @param layout matrix layout.
      * @param transA normal, transpose, or conjugate transpose
@@ -1514,9 +1622,9 @@ public interface BLAS {
 
     /**
      * Performs the matrix-matrix operation.
-     * <pre><code>
+     * <pre>{@code
      *     C := alpha*A*B + beta*C
-     * </code></pre>
+     * }</pre>
      *
      * @param layout matrix layout.
      * @param transA normal, transpose, or conjugate transpose
@@ -1540,9 +1648,9 @@ public interface BLAS {
 
     /**
      * Performs the matrix-matrix operation.
-     * <pre><code>
+     * <pre>{@code
      *     C := alpha*A*B + beta*C
-     * </code></pre>
+     * }</pre>
      *
      * @param layout matrix layout.
      * @param transA normal, transpose, or conjugate transpose
@@ -1566,9 +1674,9 @@ public interface BLAS {
 
     /**
      * Performs the matrix-matrix operation.
-     * <pre><code>
+     * <pre>{@code
      *     C := alpha*A*B + beta*C
-     * </code></pre>
+     * }</pre>
      *
      * @param layout matrix layout.
      * @param transA normal, transpose, or conjugate transpose
@@ -1592,17 +1700,17 @@ public interface BLAS {
 
     /**
      * Performs the matrix-matrix operation where the matrix A is symmetric.
-     * <pre><code>
+     * <pre>{@code
      *     C := alpha*A*B + beta*C
-     * </code></pre>
+     * }</pre>
      * or
-     * <pre><code>
+     * <pre>{@code
      *     C := alpha*B*A + beta*C
-     * </code></pre>
+     * }</pre>
      *
      * @param layout matrix layout.
-     * @param side  C := alpha*A*B + beta*C if side is left or
-     *              C := alpha*B*A + beta*C if side is right.
+     * @param side  {@code C := alpha*A*B + beta*C} if side is left or
+     *              {@code C := alpha*B*A + beta*C} if side is right.
      * @param uplo the upper or lower triangular part of the matrix A is
      *             to be referenced.
      * @param m the number of rows of the matrix C.
@@ -1621,17 +1729,17 @@ public interface BLAS {
 
     /**
      * Performs the matrix-matrix operation where the matrix A is symmetric.
-     * <pre><code>
+     * <pre>{@code
      *     C := alpha*A*B + beta*C
-     * </code></pre>
+     * }</pre>
      * or
-     * <pre><code>
+     * <pre>{@code
      *     C := alpha*B*A + beta*C
-     * </code></pre>
+     * }</pre>
      *
      * @param layout matrix layout.
-     * @param side  C := alpha*A*B + beta*C if side is left or
-     *              C := alpha*B*A + beta*C if side is right.
+     * @param side  {@code C := alpha*A*B + beta*C} if side is left or
+     *              {@code C := alpha*B*A + beta*C} if side is right.
      * @param uplo the upper or lower triangular part of the matrix A is
      *             to be referenced.
      * @param m the number of rows of the matrix C.
@@ -1650,13 +1758,13 @@ public interface BLAS {
 
     /**
      * Performs the matrix-matrix operation where one input matrix is symmetric.
-     * <pre><code>
+     * <pre>{@code
      *     C := alpha*A*B + beta*C
-     * </code></pre>
+     * }</pre>
      *
      * @param layout matrix layout.
-     * @param side  C := alpha*A*B + beta*C if side is left or
-     *              C := alpha*B*A + beta*C if side is right.
+     * @param side  {@code C := alpha*A*B + beta*C} if side is left or
+     *              {@code C := alpha*B*A + beta*C} if side is right.
      * @param uplo the upper or lower triangular part of the matrix A is
      *             to be referenced.
      * @param m the number of rows of the matrix C.
@@ -1675,13 +1783,13 @@ public interface BLAS {
 
     /**
      * Performs the matrix-matrix operation where one input matrix is symmetric.
-     * <pre><code>
+     * <pre>{@code
      *     C := alpha*A*B + beta*C
-     * </code></pre>
+     * }</pre>
      *
      * @param layout matrix layout.
-     * @param side  C := alpha*A*B + beta*C if side is left or
-     *              C := alpha*B*A + beta*C if side is right.
+     * @param side  {@code C := alpha*A*B + beta*C} if side is left or
+     *              {@code C := alpha*B*A + beta*C} if side is right.
      * @param uplo the upper or lower triangular part of the matrix A is
      *             to be referenced.
      * @param m the number of rows of the matrix C.
